Fix: Remove old vercel-python builder

--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,13 @@
 {
+  "version": 2,
   "rewrites": [
-    { "source": "/ask", "destination": "/api/app.py" },
-    { "source": "/(.*)", "destination": "/index.js" }
-  ],
-  "functions": {
-    "api/app.py": { "runtime": "vercel-python@4.4.4" }
-  }
+    {
+      "source": "/ask",
+      "destination": "api/app.py"
+    },
+    {
+      "source": "/(.*)",
+      "destination": "templates/index.html"
+    }
+  ]
 }
