--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 GROQ_API_KEY=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
+SUPABASE_URL=https://xryqwynmwtwknioidlct.supabase.co
+SUPABASE_KEY=sb_secret_Vb19Fm-OPYjK3K2CHWInPA_NSZiIDnp
