--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 GROQ_API_KEY=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
 SUPABASE_URL=https://xryqwynmwtwknioidlct.supabase.co
 SUPABASE_KEY=sb_secret_Vb19Fm-OPYjK3K2CHWInPA_NSZiIDnp
+RECAPTCHA_SECRET_KEY=6LcABzwsAAAAAI6HnBF0Tj3ZfyPeldMWRbXrjhf7
