--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 GROQ_API_KEY=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
-SUPABASE_URL=https://xryqwynmwtwknioidlct.supabase.co
-SUPABASE_KEY=sb_secret_Vb19Fm-OPYjK3K2CHWInPA_NSZiIDnp
+SUPABASE_URL=https://bbjugntuefatcfkezxri.supabase.co
+SUPABASE_KEY=sb_secret_5XuQJVq_G3BLCTABP5pSIQ_yJr_osA4
 RECAPTCHA_SECRET_KEY=6LcABzwsAAAAAI6HnBF0Tj3ZfyPeldMWRbXrjhf7
 ADMIN_USERNAME=admin
 ADMIN_PASSWORD=ZT_Password_123
